--- a/frontend/templates/macros/graph.html
+++ b/frontend/templates/macros/graph.html
@@ -38,3 +38,12 @@
 
 </div>
 {% endmacro -%}
+
+
+
+{% macro render_pdf(graph) -%}
+<div>
+  <h2>{{ graph.get_name() }}</h2>
+  <img src="{{graph.data.render_data_uri()|safe}}" width="{{graph.data.config.width}}" height="{{graph.data.config.height}}" />
+</div>
+{% endmacro -%}
