Naprawiony błąd na Linux

--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -10,12 +10,12 @@
         <meta name="author" content="Radosław Pluta, Jacek Stasiak, Łukasz Klimkiewicz">
 
         <!-- Facebook & Messenger -->
-        <meta property="og:title" content="Social Insight { %block title %}{ %endblock% }" />
+        <meta property="og:title" content="Social Insight {% block title %}{% endblock %}" />
         <meta property="og:description" content="Check how much Facebook knows about you!" />
         <meta property="og:image" content="{{ m.static('images/graph_preview.png') }}" />
 
         {% block meta %} {% endblock %}
-        <title>Social Insight{% if self.title() %} | {% endif %}{% block title %}{% endblock %}</title>
+        <title>Social Insight{% if self.title() %} | {{ self.title() }}{% endif %}</title>
 
         <!-- Icon -->
         <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.ico') }}">
