--- a/frontend/templates/collation.html
+++ b/frontend/templates/collation.html
@@ -1,6 +1,6 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% import "macros/graph.html" as mgraph %}
+{% import "macros/render_browser.html" as browser %}
 
 {% block title %}{{ collation.name }}{% endblock %}
 
@@ -18,7 +18,7 @@
         <div class="text-center">
             <span class="mr-3"><a href="" data-toggle="modal" data-target="#rename-collation-modal" class="text-secondary">rename</a></span>
             <span class="ml-3"><a href="{{ url_for('main.remove_collation_confirm', id=collation.id) }}" class="text-secondary">remove</a></span>
-            <span class="ml-3"><a href="{{ url_for('main.collation2pdf', id=collation.id) }}" class="text-secondary">generate pdf</a></span>
+            <span class="ml-3"><a href="{{ url_for('main.collation2pdf', id=collation.id) }}" target="_blank" class="text-secondary">generate pdf</a></span>
         </div>
     </div>
 </section>
@@ -36,7 +36,7 @@
     <div class="container-fluid pt-2 pb-3" style="min-height: 300px">
         <div class="card-columns">
             {% for graph in collation.graphs %}
-                {{ mgraph.render(graph) }}
+                {{ browser.render(graph) }}
             {% endfor %}
         </div>
     </div>
