--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -37,7 +37,7 @@
             </div>
             <div class="col-lg-4 mb-0 mb-lg-0 order-md-1">
                 <h4 class="mb-2">Like us on facebook</h4>
-                <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/Social-Insight-103631201619797"><i class="fab fa-fw fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/Social-Insight-103631201619797" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a>
             </div>
         </div>
     </div>
