--- a/frontend/templates/collation.html
+++ b/frontend/templates/collation.html
@@ -19,6 +19,7 @@
             <span class="mr-3"><a href="" data-toggle="modal" data-target="#rename-collation-modal" class="text-secondary">rename</a></span>
             <span class="ml-3"><a href="{{ url_for('main.remove_collation_confirm', id=collation.id) }}" class="text-secondary">remove</a></span>
             <span class="ml-3"><a href="{{ url_for('main.collation2pdf', id=collation.id) }}" target="_blank" class="text-secondary">generate pdf</a></span>
+            <span class="ml-3"><a href="{{ url_for('main.collation2pdf', id=collation.id, print='true') }}" target="_blank" class="text-secondary">pdf to print</a></span>
         </div>
     </div>
 </section>
