--- a/frontend/templates/parts/_categories.html
+++ b/frontend/templates/parts/_categories.html
@@ -12,11 +12,11 @@
             </h2>
         </div>
         {% if current_user.is_authenticated and pack.userid == current_user.id %}
-        <div class="text-center">
-            <span class="mr-3"><a href="" data-toggle="modal" data-target="#rename-pack-modal" class="text-secondary">rename</a></span>
-            <span class="ml-3"><a href="{{ url_for('main.remove_pack_confirm', id=pack.id) }}" class="text-secondary">remove</a></span>
-            <span class="ml-3"><a href="{{ url_for('main.pack2pdf', id=pack.id) }}" target="_blank" class="text-secondary">generate pdf</a></span>
-            <span class="ml-3"><a href="{{ url_for('main.pack2pdf', id=pack.id, print='true') }}" target="_blank" class="text-secondary">pdf to print</a></span>
+        <div class="text-center mt-2">
+            <div class="dark-button"><a href="" data-toggle="modal" data-target="#rename-pack-modal">rename</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.remove_pack_confirm', id=pack.id) }}">remove</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.pack2pdf', id=pack.id) }}" target="_blank">generate pdf</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.pack2pdf', id=pack.id, print='true') }}" target="_blank">pdf to print</a></div>
         </div>
         {% endif %}
 
