--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -27,8 +27,8 @@
         </div>
 
         <!-- Subheading-->
-        <p class="pre-wrap masthead-subheading font-weight-light mt-0">Let us analyse you data</p>
-        <p>Or check sample output <a href="" class="text-white"><strong><a href="{{url_for('main.example')}}" class="text-white">here!</a></strong></a></p>
+        <p class="pre-wrap masthead-subheading font-weight-light mt-0">{{ _('Let us analyse you data') }}</p>
+        <p>{{ _('Or check sample output') }} <strong><a href="{{url_for('main.example')}}" class="text-white">{{ _('here!') }}</a></strong></p>
     </div>
 </header>
 
