--- a/frontend/templates/password_reset.html
+++ b/frontend/templates/password_reset.html
@@ -1,7 +1,7 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Reset password{% endblock %}
+{% block title %}{{ _("Reset password") }}{% endblock %}
 
 {% block styles %}
     <style>
@@ -15,7 +15,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">RESET PASSWORD</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Reset password") }}</h2>
         </div>
 
         <!-- Icon Divider-->
