--- a/frontend/templates/password_reset_request.html
+++ b/frontend/templates/password_reset_request.html
@@ -1,7 +1,7 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Reset password{% endblock %}
+{% block title %}{{ _("Reset password") }}{% endblock %}
 
 {% block styles %}
     <style>
@@ -12,9 +12,9 @@
 {% block sections %}
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb mt-4 ml-5 mr-5">
-    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Main page</a></li>
-      <li class="breadcrumb-item"><a href="{{ url_for('auth.login') }}">Logging</a></li>
-    <li class="breadcrumb-item"><a>Reset password</a></li>
+    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">{{ _("Main page") }}</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('auth.login') }}">{{ _("Logging") }}</a></li>
+    <li class="breadcrumb-item"><a>{{ _("Reset password") }}</a></li>
   </ol>
 </nav>
 
@@ -23,7 +23,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">RESET PASSWORD</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Reset password") }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -35,7 +35,7 @@
 
         <div class="row text-center">
             <div class="col-12 col-lg-12">
-                <p>Enter you email address bellow. <br />If it is valid you will receive instruction to reset Your password</p>
+                <p>{{ _("Enter you email address bellow.") }} <br />{{ _("If it is valid you will receive instruction to reset Your password") }}</p>
             </div>
         </div>
 
