--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -12,8 +12,8 @@
 {% block sections %}
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb mt-4 ml-5 mr-5">
-    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Main page</a></li>
-    <li class="breadcrumb-item"><a>Logging</a></li>
+    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">{{ _('Main page') }}</a></li>
+    <li class="breadcrumb-item"><a>{{ _('Logging') }}</a></li>
   </ol>
 </nav>
 
@@ -22,7 +22,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">LOGGING</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _('Logging') }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -35,8 +35,8 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 {{ wtf.quick_form(form) }}
-                <p class="mt-3">You don't have account? <a href="{{ url_for('auth.register') }}">Register now!</a></p>
-                <p>You have forgotten your password? <a href="{{ url_for('auth.reset_password_request') }}">Reset password!</a></p>
+                <p class="mt-3">{{ _("You don't have account?") }} <a href="{{ url_for('auth.register') }}">{{ _('Register now!') }}</a></p>
+                <p>{{ _('You have forgotten your password?') }} <a href="{{ url_for('auth.reset_password_request') }}">{{ _('Reset password!') }}</a></p>
             </div>
         </div>
     </div>
