--- a/frontend/templates/password_change.html
+++ b/frontend/templates/password_change.html
@@ -1,7 +1,7 @@
 {% extends "standard.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Change password{% endblock %}
+{% block title %}{{ _("Change password") }}{% endblock %}
 
 {% block styles %}
     <style>
@@ -12,9 +12,9 @@
 {% block sections %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb mt-4 ml-5 mr-5">
-        <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Main page</a></li>
-        <li class="breadcrumb-item"><a href="{{ url_for('main.account') }}">Account</a></li>
-        <li class="breadcrumb-item"><a>Change password</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">{{ _("Main page") }}</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('main.account') }}">{{ _("Account") }}</a></li>
+        <li class="breadcrumb-item"><a>{{ _("Change password") }}</a></li>
     </ol>
 </nav>
 
@@ -23,7 +23,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">CHANGE PASSWORD</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ _("Change password") }}</h2>
         </div>
 
         <!-- Icon Divider-->
