--- a/frontend/templates/credits.html
+++ b/frontend/templates/credits.html
@@ -1,6 +1,6 @@
 {% extends "standard.html" %}
 
-{% block title %}Credits{% endblock %}
+{% block title %}{{ _("Credits") }}{% endblock %}
 
 {% block sections %}
 <section class="page-section first-section">
@@ -8,7 +8,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block" data-aos="fade-up" data-aos-duration="500">CREDITS</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase" data-aos="fade-up" data-aos-duration="500">{{ _("Credits") }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -22,14 +22,14 @@
             <div class="col-12 text-center">
                 <a href="http://www.flaticon.com" target="_blank">
                 <img src="{{ m.static('images/flaticon.png') }}" class="mw-100"><br/>
-                    <span>Icons made by Pixel perfect from www.flaticon.com</span>
+                    <span>{{ _("Icons made by Pixel perfect from www.flaticon.com") }}</span>
                 </a>
             </div>
 
             <div class="col-12 text-center mt-5">
                 <a href="https://startbootstrap.com/theme/freelancer" target="_blank">
                 <img src="{{ m.static('images/startbootstrap.png') }}" class="mw-100"><br/>
-                    <span>Page template by www.startbootstrap.com</span>
+                    <span>{{ _("Page template by www.startbootstrap.com") }}</span>
                 </a>
             </div>
         </div>
