--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -1,6 +1,6 @@
 {% extends "standard.html" %}
 
-{% block title %}Account{% endblock %}
+{% block title %}{{ _('Account') }}{% endblock %}
 
 {% block sections %}
 <section class="page-section first-section pt-5 pb-5 bg-primary round-bottom">
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <h2 class="page-section-heading text-secondary mb-0 d-inline-block">YOUR ACCOUNT</h2>
+                    <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ _('Your account') }}</h2>
                 </div>
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -24,8 +24,8 @@
             </div>
             <div class="col-auto">
                 <p class="text-secondary">{{ current_user.email }}</p>
-                <p><a href="{{url_for('auth.change_password')}}" class="text-secondary">Change Password</a></p>
-                <p><a href="{{url_for('auth.remove_account_confirm')}}" class="text-secondary">Delete account</a></p>
+                <p><a href="{{url_for('auth.change_password')}}" class="text-secondary">{{ _('Change Password') }}</a></p>
+                <p><a href="{{url_for('auth.remove_account_confirm')}}" class="text-secondary">{{ _('Delete account') }}</a></p>
             </div>
         </div>
     </div>
@@ -33,8 +33,8 @@
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb mt-4 ml-5 mr-5">
-        <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Main page</a></li>
-        <li class="breadcrumb-item"><a>Account</a></li>
+        <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">{{ _('Main page') }}</a></li>
+        <li class="breadcrumb-item"><a>{{ _('Account') }}</a></li>
     </ol>
 </nav>
 
