--- a/frontend/templates/collation.html
+++ b/frontend/templates/collation.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "macros/render_browser.html" as browser %}
 
-{% block title %}{{ collation.name }}{% endblock %}
+{% block title %}{{ _("Collation") }} {{ collation.name }}{% endblock %}
 
 {% block topscripts %}
 {{ super() }}
@@ -16,19 +16,19 @@
             <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ collation.name }}</h2>
         </div>
         <div class="text-center mt-2">
-            <div class="dark-button"><a href="" data-toggle="modal" data-target="#rename-collation-modal">rename</a></div>
-            <div class="dark-button"><a href="{{ url_for('main.remove_collation_confirm', id=collation.id) }}">remove</a></div>
-            <div class="dark-button"><a href="{{ url_for('main.collation2pdf', id=collation.id) }}" target="_blank">generate pdf</a></div>
-            <div class="dark-button"><a href="{{ url_for('main.collation2pdf', id=collation.id, print='true') }}" target="_blank">pdf to print</a></div>
+            <div class="dark-button"><a href="" data-toggle="modal" data-target="#rename-collation-modal">{{ _("rename") }}</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.remove_collation_confirm', id=collation.id) }}">{{ _("remove") }}</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.collation2pdf', id=collation.id) }}" target="_blank">{{ _("generate pdf") }}</a></div>
+            <div class="dark-button"><a href="{{ url_for('main.collation2pdf', id=collation.id, print='true') }}" target="_blank">{{ _("pdf to print") }}</a></div>
         </div>
     </div>
 </section>
 
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb mt-4 ml-5 mr-5">
-    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Main page</a></li>
-    <li class="breadcrumb-item"><a href="{{ url_for('main.account') }}">Account</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Collation</li>
+    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">{{ _("Main page") }}</a></li>
+    <li class="breadcrumb-item"><a href="{{ url_for('main.account') }}">{{ _("Account") }}</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{ _("Collation") }}</li>
   </ol>
 </nav>
 
@@ -43,7 +43,7 @@
     </div>
     {% else %}
         <div class="text-center" style="padding: 100px">
-            <h2 class="page-section-heading mb-0 d-inline-block" style="color: gray">No graphs in this collation</h2>
+            <h2 class="page-section-heading mb-0 d-inline-block" style="color: gray">{{ _("No graphs in this collation") }}</h2>
         </div>
     {% endif %}
 </section>
