--- a/frontend/templates/macros/render_browser.html
+++ b/frontend/templates/macros/render_browser.html
@@ -1,7 +1,7 @@
 {% import "macros/general.html" as m %}
 
 {% macro render(graph, showButton=True) -%}
-<div class="card mb-4 {% if graph.data is none %}bg-warning{% endif %}" id="graph-{{graph.id}}">
+<div class="card mb-4" id="graph-{{graph.id}}">
 
   <div class="text-center">
     <h2 class="graph-header"><a class="js-scroll-trigger" href="#graph-{{graph.id}}">{{ graph.get_name() }}</a></h2>
@@ -12,12 +12,12 @@
   <div class="card-body mt-0 pt-0">
     {% if graph.pack.user == user() %}
       {% if showButton %}
-        <div class="graph-button"><a href="{{ url_for('main.graphs', id=graph.id) }}">Show</a></div>
+        <div class="graph-button"><a href="{{ url_for('main.graphs', id=graph.id) }}">{{ _("Show") }}</a></div>
       {% endif %}
-      <div class="graph-button"><a data-toggle="collapse" href="#graph-{{graph.id}}-collapse">Add</a></div>
-      <div class="graph-button {{ '' if graph.public else 'disable' }}" id="graph-{{graph.id}}-public"><a onclick="toggleGraphPublic({{graph.id}})">Public</a></div>
-      <div id="graph-{{graph.id}}-share" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a data-sharer="facebook" data-hashtag="Social-Insight" data-url="{{ url_for('main.graphs', id=graph.id, _external=True) }}">Share</a></div>
-      <div id="graph-{{graph.id}}-copy" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a onclick="copyToClipboard({{graph.id}})">Copy link</a></div>
+      <div class="graph-button"><a data-toggle="collapse" href="#graph-{{graph.id}}-collapse">{{ _("Add") }}</a></div>
+      <div class="graph-button {{ '' if graph.public else 'disable' }}" id="graph-{{graph.id}}-public"><a onclick="toggleGraphPublic({{graph.id}})">{{ _("Public") }}</a></div>
+      <div id="graph-{{graph.id}}-share" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a data-sharer="facebook" data-hashtag="Social-Insight" data-url="{{ url_for('main.graphs', id=graph.id, _external=True) }}">{{ _("Share") }}</a></div>
+      <div id="graph-{{graph.id}}-copy" class="graph-button disable-link {{ '' if graph.public else 'd-none' }}"><a onclick="copyToClipboard({{graph.id}})">{{ _("Copy link") }}</a></div>
 
       <div class="collapse" id="graph-{{graph.id}}-collapse">
         {% for col in user().collations %}
@@ -30,7 +30,7 @@
   {% else %}
   <div class="card-body mt-0 pt-0 text-center">
     <img class="mt-3" style="height: 200px" src="{{ m.static('images/graph_error.png') }}"/>
-    <p class="mt-3">Sorry, error occured</p>
+    <p class="mt-3">{{ _("Sorry, error occured") }}</p>
   </div>
 
   {% endif %}
@@ -45,7 +45,7 @@
   {% elif is_pandas_table(sth) %}
     {{ render_pandas_table(sth) }}
   {% else %}
-    <p>Unknown type of data to render</p>
+    <p>{{ _("Unknown type of data to render") }}</p>
   {% endif %}
 {% endmacro -%}
 
