--- a/frontend/templates/macros/render_pdf.html
+++ b/frontend/templates/macros/render_pdf.html
@@ -17,7 +17,7 @@
   {% elif is_pandas_table(sth) %}
     {{ render_pandas_table(sth) }}
   {% else %}
-    <p>Unknown type of data to render</p>
+    <p>{{ _("Unknown type of data to render") }}</p>
   {% endif %}
 {% endmacro -%}
 
