--- a/frontend/templates/parts/_language_modal.html
+++ b/frontend/templates/parts/_language_modal.html
@@ -7,7 +7,7 @@
                     <div class="row justify-content-center">
                         <div class="col-12">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary mb-0">Language</h2>
+                            <h2 class="portfolio-modal-title text-secondary mb-0">{{ _("Language") }}</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -22,7 +22,7 @@
                             <a href="{{ url_for('main.change_language', lang='pl') }}"><img class="mb-5" src="{{ m.static('images/polish.png') }}" alt="Polish"/></a>
                         </div>
                         <div class="col-12">
-                            <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                            <button class="btn btn-primary text-capitalize" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>{{ _("Close window") }}</button>
                         </div>
                     </div>
                 </div>
