Oznaczono tłumaczenia we wszystkich plikach .py

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -38,7 +38,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">Features</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">{{ _('Features') }}</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -80,7 +80,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-white mb-0 d-inline-block text-uppercase">How to get data file?</h2>
+            <h2 class="page-section-heading text-white mb-0 d-inline-block text-uppercase">{{ _('How to get data file?') }}</h2>
         </div>
 
         <!-- Icon Divider-->
