--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-auto">
                 <p class="text-secondary">{{ current_user.email }}</p>
-                <p><a href="{{url_for('auth.change_password')}}" class="text-secondary">{{ _('Change Password') }}</a></p>
+                <p><a href="{{url_for('auth.change_password')}}" class="text-secondary">{{ _('Change password') }}</a></p>
                 <p><a href="{{url_for('auth.remove_account_confirm')}}" class="text-secondary">{{ _('Delete account') }}</a></p>
             </div>
         </div>
